# SyncTranslate

./: .coverage  .gitignore  DATA_FLOW_DIAGRAM.md  DEBUGGING_16KHZ_ISSUE.md  README.md  README_16KHZ_ANALYSIS.md  ROOT_CAUSE_ANALYSIS_DETAILED.md  SETUP_GUIDE.md  SyncTranslate-onedir.spec  SyncTranslate-onefile.spec  SyncTranslate.spec  TRANSLATION_DIAGNOSIS_REPORT.md  TRANSLATION_FIX_QUICK_START.md  TRANSLATION_RUNTIME_FIX.md  VoiceMeeter Banana 設定說明.md  config.example.yaml  config.yaml  conftest.py  diagnose_translation_runtime.py  diagnostics_20260311_222032.txt  lioil.icns  main.py  pyproject.toml  requirements.txt  voice meeter.xml  voicemeeter_setting.xml  優化建議.md  實作開發計畫.md  程式開發步驟說明.md
.github/workflows/: build-release.yml
app/: __init__.py  app_bootstrap.py  asr_manager.py  asr_worker.py  audio_capture.py  audio_device_selection.py  audio_input_manager.py  audio_playback.py  audio_router.py  config_apply_service.py  debug_panel.py  device_manager.py  diagnostics_service.py  env_vars.py  events.py  main_window.py  model_factory.py  model_providers.py  pages_audio_routing.py  pages_diagnostics.py  pages_io_control.py  pages_live_caption.py  pages_local_ai.py  pages_models.py  pages_quick_start.py  pipeline_direction.py  pipeline_local.py  pipeline_remote.py  router.py  runtime_facade.py  schemas.py  session_controller.py  settings.py  state_manager.py  transcript_buffer.py  translator_manager.py  tts_language_resolver.py  tts_manager.py  ui_main.py  version.py  (+1 more)
app/application/: _latency_tracker.py  _partial_display_policy.py  asr_event_processor.py  audio_router.py  auto_populate_devices.py  call_translation_policy.py  config_apply_service.py  diagnostics_export.py  display_punctuation.py  export_service.py  first_run_readiness.py  pipeline_metrics.py  (+9 more)
docs/: ARCHITECTURE.md  ASR優化修改建議.md  ASR重構藍圖.md  CHANGELOG.md  CONFIGURATION.md  PR_SUMMARY_2026-05-04.md  README.md  RECOMMENDED_FIXES.md  TESTING.md  driver_build_and_signing.md  install_sync_translate.ps1  run_install_sync_translate.cmd  v2_windows_驗收清單.md  virtual_audio_protocol_v2.md  代碼修改.md  修改計畫.md  修改計畫_v1.md  修改計畫_v2_產品化重構版.md  優化建議.md  安裝說明.md  後續優化計畫.md  快速安裝手冊.md  文件導覽.md  更新紀錄.md  架構說明.md  測試說明.md  直通模式排錯清單.md  設定說明.md  重構計畫.md  音訊16kHz問題修復記錄.md  音訊裝置建議配置.md  首次啟動引導.md
tests/: conftest.py  test_app_factory.py  test_asr_auto_language_switch.py  test_asr_backend_routing.py  test_asr_benchmark_smoke.py  test_asr_confidence_policy.py  test_asr_enhancement_v2.py  test_asr_error_formatting.py  test_asr_factory.py  test_asr_frontend_v2.py  test_asr_language_resolution.py  test_asr_local_benchmark_corpus.py  test_asr_model_download.py  test_asr_postprocess_v2.py  test_asr_regression_corpus_prepare.py  test_asr_regression_manifest.py  test_asr_regression_runner.py  test_asr_resampling.py  test_asr_streaming_and_profiles.py  test_asr_text_correction.py  test_asr_v2_endpointing.py  test_asr_v3_rescue_and_routing.py  test_audio_pipeline_and_benchmark.py  test_audio_playback_passthrough.py  test_audio_router_core.py  test_audio_router_policy.py  test_audio_router_refactor_smoke.py  test_audio_routing_virtual_devices.py  test_bridge_process_device_resolution.py  test_bridge_ring_buffer.py  test_config_apply_service.py  test_config_migration.py  test_diagnostics_export.py  test_display_punctuation.py  test_driver_format_docs_v2.py  test_driver_scripts_readiness.py  test_driver_virtual_audio_format_v2.py  test_external_runtime.py  test_faster_whisper_metadata.py  test_glossary_loader.py  (+43 more)
tools/: __init__.py  list_output_devices.py  phase8_tracker.py  play_to_virtual_speaker.py  runtime_soak_30m.py  scan_virtual_speakers.py  test_startup_suppress.py  verify_virtual_bridge_pcm.py
(+230 files in other folders)
