[project]
name = "synctranslate"
version = "3.0.0"
description = "Windows desktop live interpreter for meeting audio with local ASR and local LLM backends"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.7",
    "miniaudio>=1.61",
    "numpy>=2.4.3",
    "opencc-python-reimplemented>=0.1.7",
    "pyside6>=6.10.2",
    "pyyaml>=6.0.3",
    "soundcard>=0.4.5",
    "sounddevice>=0.5.5",
]

[project.scripts]
synctranslate = "main:main"

[project.optional-dependencies]
local = [
    "faster-whisper>=1.2.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
