[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synctranslate"
version = "2.0.0"
description = "Windows desktop live interpreter for meeting audio with local ASR and local LLM backends"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.7",
    "miniaudio>=1.61",
    "numpy>=2.4.3",
    "opencc-python-reimplemented>=0.1.7",
    "pyside6>=6.10.2",
    "pyyaml>=6.0.3",
    "soundcard>=0.4.5",
    "sounddevice>=0.5.5",
]

[project.scripts]
synctranslate = "main:main"

[project.optional-dependencies]
local = [
    "faster-whisper>=1.2.1",
    "funasr>=1.3.0",
    "modelscope>=1.18.0",
    "silero-vad>=6.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
build = [
    "pyinstaller>=6.16.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["app*"]
