[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synctranslate"
version = "2.1.0"
description = "Windows desktop live interpreter for meeting audio with local ASR and local LLM backends"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.7",
    "miniaudio>=1.61",
    "numpy>=2.4.3",
    "opencc-python-reimplemented>=0.1.7",
    "pyside6>=6.10.2",
    "pyyaml>=6.0.3",
    "soundcard>=0.4.5",
    "sounddevice>=0.5.5",
]

[project.scripts]
synctranslate = "main:main"

[project.optional-dependencies]
local = [
    "torch==2.10.0+cu128; sys_platform == 'win32' or (sys_platform == 'linux' and platform_machine == 'x86_64')",
    "torchaudio==2.10.0+cu128; sys_platform == 'win32' or (sys_platform == 'linux' and platform_machine == 'x86_64')",
    "torch==2.10.0; sys_platform == 'darwin'",
    "torchaudio==2.10.0; sys_platform == 'darwin'",
    "torch==2.10.0; sys_platform == 'linux' and platform_machine != 'x86_64'",
    "torchaudio==2.10.0; sys_platform == 'linux' and platform_machine != 'x86_64'",
    "faster-whisper>=1.2.1",
    "funasr>=1.3.0",
    "modelscope>=1.18.0",
    "silero-vad>=6.2.1",
    "tiktoken>=0.5.0",
    "addict>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
build = [
    "pyinstaller>=6.16.0",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or (sys_platform == 'linux' and platform_machine == 'x86_64')" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or (sys_platform == 'linux' and platform_machine == 'x86_64')" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["app*"]
